addons/prometheus-operator/promo-ingress.yaml
#apiVersion: networking.k8s.io/v1 #changed
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
  labels:
    app: prometheus
spec:
  rules:
    - host: prom.kubernauts.local
      http:
        paths:
          - path: /
            pathType: Prefix #changed
            backend:
              #serviceName: prometheus-operated #changed
              #servicePort: 9090 #changed
              service:
                name: prometheus-operated
                port:
                  number: 9090
